--- a/public/index.html
+++ b/public/index.html
@@ -24,11 +24,7 @@
       work correctly both with client-side routing and a non-root public URL.
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
-    <title>Taskbox app</title>
-    <link
-      href="https://fonts.googleapis.com/css?family=Nunito+Sans:400,700,800,900&display=swap"
-      rel="stylesheet"
-    />
+    <title>React App</title>
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
